# v3-rs

./: ._target  .gitignore  Cargo.toml  Makefile  README.md
bindings/: Cargo.toml
bindings/src/: IERC20.rs  IOFTV2.rs  IProxyOFTV2.rs  IUniswapV3Factory.rs  IUniswapV3Pool.rs  lib.rs  lib.txt  main.rs
bindings/src/abis/: OFTV2.json  ProxyOFTV2.json
examples/: get_lp_balance.rs  get_pool_price.rs  optimal_swap_for_price.rs
pool/: Cargo.toml
pool/src/: constants.rs  error.rs  lib.rs  macros.rs  main.rs  math.rs  numeraire.rs  pool.rs  position.rs
pool/src/ethers_pool/: factory.rs  mod.rs  pool.rs
pool/src/macros/: token_amount.rs
pool/src/math/: liquidity.rs  swap.rs  tick.rs  wrappers.rs
pool/src/pool/: liquidity.rs  price.rs  swap.rs
pool/src/traits/: basis_points.rs  float.rs  mod.rs
pool/src/types/: amount.rs  deltas.rs  mod.rs  price.rs
src/: constants.rs  error.rs  lib.rs  macros.rs  math.rs  pool.rs  position.rs
src/alloy_pool/: factory.rs  mod.rs  pool.rs
src/macros/: token_amount.rs  wrappers.rs
src/math/: liquidity.rs  swap.rs  tick.rs  wrappers.rs
src/pool/: price.rs  swap.rs
src/traits/: basis_points.rs  batch.rs  float.rs  mod.rs
src/types/: amount.rs  deltas.rs  mod.rs  price.rs
