[package]
name = "v3-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.10.0"
tokio = { version = "1.16.1", features = ["full"] }
futures = "0.3.17"
lazy_static = "1.4.0"
async-trait = "0.1.74"
tracing = "0.1.40"
serde = {version = "1.0.193", features = ["derive"]}
anyhow = "1.0.75"
thiserror = "1.0.61"
alloy = { version = "0.3.0", features = ["full"] }

[patch.crates-io]
alloy = { git = "https://github.com/nhtyy/alloy", branch = "n/multicall" }