[package]
name = "v3-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nhtyy/v3-rs"
description = "A Rust library for interacting with Uniswap V3 pools."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.10.0"
tokio = { version = "1.16.1", features = ["full"] }
futures = "0.3.17"
lazy_static = "1.4.0"
async-trait = "0.1.74"
tracing = "0.1.40"
serde = {version = "1.0.193", features = ["derive"]}
anyhow = "1.0.75"
thiserror = "1.0.61"
alloy = { version = "0.4.0", features = ["full"] }
phf = { version = "0.11.2", features = ["macros"] }

[[example]]
name = "get_lp_balance"
path = "examples/get_lp_balance.rs"

[[example]]
name = "get_pool_price"
path = "examples/get_pool_price.rs"

[[example]]
name = "optimal_swap_for_price"
path = "examples/optimal_swap_for_price.rs"

[features]
default = []
trace_callMany = ["alloy/rpc-types-trace"]
eth_callMany = []

[dev-dependencies]
tracing-subscriber = "0.3.18"
