[package]
name = "pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.6"
bigdecimal = "0.3.0"
num = "0.4.0"
rug = "1.10.0"
tokio = { version = "1.16.1", features = ["full"] }
bindings = { workspace = true }
futures = "0.3.17"
lazy_static = "1.4.0"
async-trait = "0.1.74"
tracing = "0.1.40"
serde = {version = "1.0.193", features = ["derive"]}
anyhow = "1.0.75"
thiserror = "1.0.61"
